--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ html {
   font-size: 18px;
   font-family: "Times New Roman", Times, serif;
   /* background-color: #00539f; */
-  background-image: url(./images/background.jpg);
+  background-image: url(../images/background.jpg);
 }
 
 h1 {
